# treemor

./: .env.example  .gitignore  .gitkeep  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/theory/: TREEMOR_RESEARCH_PAPER.docx
notebooks/: README.md
reports/: README.md
reports/alerts/: README.txt  alert_20260323_132828.txt
reports/daily/: README.txt  daily_report_2026-03-23.txt
reports/monthly/: README.txt  monthly_report_2026_03.txt
reports/weekly/: README.txt  weekly_report_week_2026_12.txt
scripts/: calibrate_tree.py  deploy_sensor.py  generate_daily_report.py  generate_reports.py  monitor_network.py  process_events.py
tests/: __init__.py
tests/unit/: __init__.py  test_forest_network.py  test_fsin.py  test_tree_sensor.py  test_tssi.py
treemor/: __init__.py  cli.py
treemor/core/: __init__.py  fsin.py  tssi.py
treemor/dashboard/: __init__.py  app.py
treemor/dashboard/assets/: script.js  style.css
treemor/engine/: __init__.py  engine.py
treemor/geology/: __init__.py
treemor/ml/: __init__.py
treemor/network/: __init__.py  forest_network.py
treemor/sensors/: __init__.py  tree_sensor.py
treemor/signal/: __init__.py
treemor/species/: __init__.py
treemor/utils/: __init__.py
