[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treemor"
version = "1.0.0"
description = "TREEMOR: Bio-Seismic Sensing & Planetary Infrasound Resonance"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Samir Baladi", email = "gitdeeper@gmail.com"}
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://treemor.netlify.app"
Repository = "https://github.com/gitdeeper9/treemor"
DOI = "https://doi.org/10.5281/zenodo.19183878"

[tool.setuptools]
packages = ["treemor"]
