[metadata]
name = treemor
version = 1.0.0
author = Samir Baladi
author_email = gitdeeper@gmail.com
description = TREEMOR: Bio-Seismic Sensing & Planetary Infrasound Resonance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://treemor.netlify.app
license = MIT

[options]
packages = find:
python_requires = >=3.9
